@@ -1,3 +1,3 @@
-baobab.omf
+baobab-C.omf
 Makefile
 Makefile.in
