@@ -1,5 +1,14 @@
 2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* data/Makefile.am: Revert the libglade hack, and add a BFN
+	about it.
+
+	* pixmaps/Makefile.am: Use datadir instead of pkgdatadir.
+
+	* help/.cvsignore: Update.
+
+2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* *: Initial import inside gnome-utils.
 
 2006-04-22  Fabio Marzocca  <thesaltydog@gmail.com>
